--- a/tugas4/index.html
+++ b/tugas4/index.html
@@ -85,7 +85,7 @@
             <div class="skills-grid">
                 <div class="skill-card">
                     <div class="skill-card-content">
-                        <img src="/assets/web-dev.png" alt="Web Development" class="skill-icon">
+                        <img src="/assets/webdev.png" alt="Web Development" class="skill-icon">
                         <div class="skill-text">
                             <h3>Web Development</h3>
                             <p>Membangun dan mengembangkan website yang responsif, cepat, dan fungsional sesuai kebutuhan pengguna.</p>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="skill-card">
                     <div class="skill-card-content">
-                        <img src="/assets/web-design.png" alt="Web Design" class="skill-icon">
+                        <img src="/assets/webdesign.png" alt="Web Design" class="skill-icon">
                         <div class="skill-text">
                             <h3>Web Design</h3>
                             <p>Merancang tampilan website yang modern, estetis, dan sesuai dengan identitas brand.</p>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="skill-card">
                     <div class="skill-card-content">
-                        <img src="/assets/ui-ux.png" alt="UI/UX" class="skill-icon">
+                        <img src="/assets/uiux.png" alt="UI/UX" class="skill-icon">
                         <div class="skill-text">
                             <h3>UI/UX</h3>
                             <p>Menciptakan pengalaman pengguna yang menarik dan desain antarmuka yang intuitif untuk meningkatkan kenyamanan pengguna.</p>
