--- a/tugas4/index.html
+++ b/tugas4/index.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="skill-card">
                     <div class="skill-card-content">
-                        <img src="/assets/ui-ux.png" alt="UI/UX" class="skill-icon">
+                        <img src="pweb/tugas4/assets/ui-ux.png" alt="UI/UX" class="skill-icon">
                         <div class="skill-text">
                             <h3>UI/UX</h3>
                             <p>Menciptakan pengalaman pengguna yang menarik dan desain antarmuka yang intuitif untuk meningkatkan kenyamanan pengguna.</p>
